2003/12/11 18:01 (-0500) rwmcfa1

	* tools/podifystockitems.pl: was doing Gtk2 '-init' no reason to and it
	caused build (of doc) to fail when no display is set.

2003/12/11 16:53 (-0500) muppetman

	* t/27.GtkClipboard.t, t/30.GtkCellRenderer.t, t/text-iter-searches.t:
	these didn't skip all tests when there is no display, making builds
	fail on headless build servers.  it would be nice to wrap up some of
	this testing boilerplate a bit more.

2003/12/08 13:47 (-0500) rwmcfa1

	* t/paned.t: use strict and use warnings

	* xs/GtkLabel.xs, xs/GtkSizeGroup.xs, xs/GtkStock.xs: apidoc, added 
	enum(s)

2003/12/08 11:14 (-0500) muppetman

	* pm/SimpleList.pm: call signature comments to make maintenance easier.

	* t/paned.t: give effect to statement with no effect

2003/12/08 02:39 (-0500) muppetman

	* xs/GtkWidget.xs: implement gtk_widget_style_get for >= 2.2.0

	* t/paned.t: more robust testing

2003/12/07 22:34 (-0500) rwmcfa1

	* t/trivial-widgets.t: initial import

 	* MANIFEST: added t/trivial-widgets.t, and xs/GtkAccelMap.xs

 	* xs/GtkArrow.xs: doc the GtkArrowtype and GtkShadowType enums in pod
 
	* xs/GtkDnd.xs, xs/GtkTreeStore.xs, xs/GtkTreeView.xs: removed a xxx1 
	param

2003/12/07 21:44 (-0500) muppetman

	* xs/GtkPaned.xs: turn the child[12]_(resize|shrink) accessors into
	mutators, with doc; rearrange the xsubs to make more sense, and adapt
	the docs from the C api reference for the description section.

	A t/paned.t
	* MANIFEST: new test

2003/12/07 16:19 (-0500) rwmcfa1

 	* xs/GtkCalendar.xs, xs/GtkTextIter.xs, xs/GtkTreeModel.xs,
	xs/GtkWidget.xs, xs/PangoTabs.xs: apidoc added/fixed.

2003/12/07 16:19 (-0500) rwmcfa1

	* pm/SimpleList.pm: DELETE fixed, SPLICE implemented for simplelist.

	* t/19.SimpleList.t: test all of the splice stuff

	* examples/simplelist.pl: (muppet) test the new splice stuff

2003/12/06 01:30 (-0500) rwmcfa1

 	* xs/GtkAccelGroup.xs: Gtk2-> functions moved under Gtk2::AccellGroups
	which seems to make more sense.
